--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,11 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "*.js",
-      "use": "@vercel/node"
-    }
+    { "src": "api/**/*.js", "use": "@vercel/node" },
+    { "src": "src/**/*", "use": "@vercel/static-build" }
   ],
   "routes": [
-    {
-      "src":"/(.*)",
-      "dest": "/"
-    }
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "/src/$1" }
   ]
 }
